--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # OpenSearch environment variables
-OPENSEARCH_ENDPOINT=""
-OPENSEARCH_INDEX_NAME=""
-OPENSEARCH_USERNAME=""
-OPENSEARCH_PASSWORD=""
+OPENSEARCH_ENDPOINT="https://kviqznsn9qgriwrn6wze.ap-northeast-2.aoss.amazonaws.com"
+OPENSEARCH_INDEX_NAME="bedrock"
+
 
 # AWS Credentials
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
-AWS_REGION=""
-BEDROCK_MODEL_ID="anthropic.claude-3-5-sonnet-20240620-v1:0"
+AWS_REGION="ap-northeast-2"
+# BEDROCK_MODEL_ID="anthropic.claude-3-5-sonnet-20240620-v1:0"
+BEDROCK_MODEL_ID="apac.anthropic.claude-3-sonnet-20240229-v1:0"
